# STRIDE_downstream

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  STRIDE_MASTER_HANDOFF.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: architecture.md  data_model.md  s1a.md  s1b.md  s2.md  s3.md  s4.md  s5.md  s6.md  s7.md  usage.md
examples/small_synthetic_dataset/: README.md
examples/small_synthetic_dataset/summaries/: DENV1_mechanism.json  DENV1_profile.csv  DENV2_profile.csv  DENV3_profile.csv  DENV4_profile.csv
src/stride_analysis/: __init__.py  __main__.py  _synthetic.py  reporting.py  s0.py
src/stride_analysis/canonical/: __init__.py  replicate_table.py  stride_table.py
src/stride_analysis/io/: __init__.py  discovery.py  loaders.py
src/stride_analysis/models/: __init__.py  errors.py  schema.py
src/stride_analysis/validation/: __init__.py  cross_level.py  hierarchy.py  replicate.py  summary.py
src/stride_s1a/: __init__.py  __main__.py  s1a.py
src/stride_s1a/io/: __init__.py  loaders.py  writers.py
src/stride_s1b/: __init__.py  __main__.py  s1b.py
src/stride_s2/: __init__.py  __main__.py  s2.py
src/stride_s3/: __init__.py  __main__.py  s3.py
src/stride_s4/: __init__.py  __main__.py  s4.py
src/stride_s5/: __init__.py  __main__.py  s5.py
src/stride_s6/: __init__.py  __main__.py  s6.py
src/stride_s7/: __init__.py  __main__.py  s7.py
tests/: conftest.py
tests/integration/: test_cli.py  test_real_layout_bugfix.py  test_s0_pipeline.py
tests/s1a/: conftest.py  fixtures.py  test_canonical_residues.py  test_domain_and_conservation.py  test_pipeline.py  test_replicate_inventory.py  test_validation.py
tests/s1b/: conftest.py  fixtures.py  test_annotation_builders.py  test_classify.py  test_pipeline.py  test_residue_annotation.py  test_validation.py
tests/s2/: conftest.py  fixtures.py  test_pipeline.py  test_reduction_builders.py  test_screens.py  test_validation.py
tests/s3/: conftest.py  fixtures.py  test_curves.py  test_pipeline.py  test_reduction_builders.py  test_validation.py
tests/s4/: conftest.py  fixtures.py  test_pipeline.py  test_reduction_builders.py  test_stats.py  test_validation.py
tests/s5/: conftest.py  fixtures.py  test_frames.py  test_pipeline.py  test_reduction_builders.py  test_validation.py
tests/s6/: conftest.py  fixtures.py  test_concordance.py  test_frames.py  test_pipeline.py  test_reduction_builders.py  test_validation.py
tests/s7/: __init__.py  conftest.py  fixtures.py  test_figures.py  test_pipeline.py  test_plotting.py  test_tables.py  test_validation.py
tests/unit/: test_canonical.py  test_discovery.py  test_loaders.py  test_replicate_validation.py  test_summary_validation.py
(+67 files in other folders)
